--- a/data/htm/2013_1_basics_science.htm
+++ b/data/htm/2013_1_basics_science.htm
@@ -3085,7 +3085,7 @@
 <td class="pstyle2">월&nbsp;8-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">028-103&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">송호장&nbsp;</td>
 <td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -3098,7 +3098,7 @@
 <td class="pstyle2">수&nbsp;8-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">028-103&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">송호장&nbsp;</td>
 <td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -3163,7 +3163,7 @@
 <td class="pstyle2">월&nbsp;5,6&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">035-223&nbsp;</td>
-<td class="pstyle2">윤성로&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -3176,7 +3176,7 @@
 <td class="pstyle2">수&nbsp;5,6&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">035-223&nbsp;</td>
-<td class="pstyle2">윤성로&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -4594,7 +4594,7 @@
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">061-320&nbsp;</td>
 <td class="pstyle2">최선호&nbsp;</td>
-<td class="pstyle2">90&nbsp;</td>
+<td class="pstyle2">200&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
@@ -4607,7 +4607,7 @@
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">061-320&nbsp;</td>
 <td class="pstyle2">최선호&nbsp;</td>
-<td class="pstyle2">90&nbsp;</td>
+<td class="pstyle2">200&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
@@ -4814,7 +4814,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">김병문&nbsp;</td>
+<td class="pstyle2">신석민&nbsp;</td>
 <td class="pstyle2">600&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -4827,7 +4827,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">홍종인&nbsp;</td>
+<td class="pstyle2">이철범&nbsp;</td>
 <td class="pstyle2">600&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -4840,7 +4840,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">정두수&nbsp;</td>
+<td class="pstyle2">손병혁&nbsp;</td>
 <td class="pstyle2">350&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -4983,7 +4983,7 @@
 <td class="pstyle2">금&nbsp;7,8&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">028-103&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">송호장&nbsp;</td>
 <td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
