--- a/data/htm/2013_1_normal_art.htm
+++ b/data/htm/2013_1_normal_art.htm
@@ -888,7 +888,7 @@
 <td class="pstyle2">금&nbsp;3,4,5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">007-101&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김지미&nbsp;</td>
 <td class="pstyle2">60&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
