--- a/data/htm/2013_1_normal_society.htm
+++ b/data/htm/2013_1_normal_society.htm
@@ -157,9 +157,9 @@
 <td class="pstyle2">경제학개론&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">월&nbsp;9-1.5&nbsp;</td>
+<td class="pstyle2">월&nbsp;4.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">083-506&nbsp;</td>
+<td class="pstyle2">028-301&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">200&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -170,9 +170,9 @@
 <td class="pstyle2">경제학개론&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">수&nbsp;9-1.5&nbsp;</td>
+<td class="pstyle2">수&nbsp;4.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">083-506&nbsp;</td>
+<td class="pstyle2">028-301&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">200&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -209,20 +209,7 @@
 <td class="pstyle2">경제학개론&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">월&nbsp;6-1.5&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">028-101&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">200&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
-<tr>
-<td class="pstyle2">1학년&nbsp;</td>
-<td class="pstyle2">005.004&nbsp;</td>
-<td class="pstyle2">003&nbsp;</td>
-<td class="pstyle2">경제학개론&nbsp;</td>
-<td class="pstyle2">교양&nbsp;</td>
-<td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">수&nbsp;6-1.5&nbsp;</td>
+<td class="pstyle2">수&nbsp;6,7,8&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">028-101&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
@@ -378,9 +365,9 @@
 <td class="pstyle2">인간관계의 심리학&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">월&nbsp;1.5,2.5,3.5&nbsp;</td>
+<td class="pstyle2">월&nbsp;5,6,7&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">083-506&nbsp;</td>
+<td class="pstyle2">220-203&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">100&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -641,7 +628,7 @@
 <td class="pstyle2">화&nbsp;7,8,9&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">57-1-113&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">정용덕&nbsp;</td>
 <td class="pstyle2">100&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -656,32 +643,6 @@
 <td class="pstyle2">058-327&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">70&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
-<tr>
-<td class="pstyle2">1학년&nbsp;</td>
-<td class="pstyle2">005.055&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">정보다루기&nbsp;</td>
-<td class="pstyle2">교양&nbsp;</td>
-<td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">월&nbsp;1.5-1.5&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">016-110&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">80&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
-<tr>
-<td class="pstyle2">1학년&nbsp;</td>
-<td class="pstyle2">005.055&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">정보다루기&nbsp;</td>
-<td class="pstyle2">교양&nbsp;</td>
-<td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">수&nbsp;1.5-1.5&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">016-110&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
