수강편람 업데이트

--- a/data/htm/2013_1_normal_special.htm
+++ b/data/htm/2013_1_normal_special.htm
@@ -374,19 +374,6 @@
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
-<td class="pstyle2">029&nbsp;</td>
-<td class="pstyle2">신입생세미나&nbsp;</td>
-<td class="pstyle2">교양&nbsp;</td>
-<td class="pstyle2">1-1-0&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">백순근&nbsp;</td>
-<td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
-<tr>
-<td class="pstyle2">1학년&nbsp;</td>
-<td class="pstyle2">009.001&nbsp;</td>
 <td class="pstyle2">030&nbsp;</td>
 <td class="pstyle2">신입생세미나&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
@@ -1210,9 +1197,9 @@
 <td class="pstyle2">산과 인생&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">2-1-2&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">금&nbsp;5,6,7&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">071-212&nbsp;</td>
 <td class="pstyle2">김진성&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1223,9 +1210,9 @@
 <td class="pstyle2">산과 인생&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">2-1-2&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">금&nbsp;5,6,7&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">071-301&nbsp;</td>
 <td class="pstyle2">나영일&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1236,9 +1223,22 @@
 <td class="pstyle2">자전거와 스포츠과학&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">2-1-2&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td class="pstyle2">화&nbsp;5,6,7&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">071-301&nbsp;</td>
+<td class="pstyle2">정철수&nbsp;</td>
+<td class="pstyle2">30&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">009.302&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">자전거와 스포츠과학&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">2-1-2&nbsp;</td>
+<td class="pstyle2">금&nbsp;5,6,7&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">정철수&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
