--- a/data/htm/2013_1_normal_nature.htm
+++ b/data/htm/2013_1_normal_nature.htm
@@ -56,7 +56,7 @@
 <td class="pstyle2">월&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">024-210&nbsp;</td>
-<td class="pstyle2">이규철&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">60&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -69,7 +69,7 @@
 <td class="pstyle2">수&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">024-210&nbsp;</td>
-<td class="pstyle2">이규철&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">60&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -263,7 +263,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">금&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">220-203&nbsp;</td>
+<td class="pstyle2">222-701&nbsp;</td>
 <td class="pstyle2">이기영&nbsp;</td>
 <td class="pstyle2">160&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -274,9 +274,9 @@
 <td class="pstyle2">녹색 생활과 소비&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">목&nbsp;2,3,4&nbsp;</td>
+<td class="pstyle2">목&nbsp;4,5,6&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">083-404&nbsp;</td>
+<td class="pstyle2">222-201&nbsp;</td>
 <td class="pstyle2">박정희&nbsp;</td>
 <td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
