--- a/data/htm/2013_1_normal_art.htm
+++ b/data/htm/2013_1_normal_art.htm
@@ -1249,10 +1249,10 @@
 <td class="pstyle2">음악의 원리&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">월&nbsp;7,8,9&nbsp;</td>
+<td class="pstyle2">화&nbsp;10,8,9&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">049-123&nbsp;</td>
-<td class="pstyle2">서정은&nbsp;</td>
+<td class="pstyle2">055-203&nbsp;</td>
+<td class="pstyle2">전상직&nbsp;</td>
 <td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 
